--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
-    <title>My Portfolio</title>
+    <title>Redwan Ahmed</title>
   </head>
   <body>
-   <h1>HIya</h1>
+    <section id="landing-page">
+      <nav>
+        <figure><img src="" alt="" /></figure>
+        <ul class="nav__link--list">
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >About</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
+          </li>
+          <li class="nav__link">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </section>
   </body>
 </html>
