Most HTML & CSS, updated and done

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/46139afb7e.js"
+      crossorigin="anonymous"></script>
 
     <title>Redwan Ahmed</title>
   </head>
+
   <body>
     <section id="landing-page">
       <nav>
-        <figure><img src="" alt="" /></figure>
+        <figure>
+          <h1 id="personal-logo">
+            <span class="crimson">Red</span>wan<span class="crimson">.</span>
+          </h1>
+        </figure>
         <ul class="nav__link--list">
           <li class="nav__link">
             <a
@@ -21,7 +29,7 @@
               >About</a
             >
           </li>
-          <li class="nav__link">
+          <li lass=" nav__link">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -35,8 +43,194 @@
               >Contact</a
             >
           </li>
+          <li class="nav__link click">
+            <a
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              ><i class="fa-solid fa-circle-half-stroke"></i
+            ></a>
+          </li>
         </ul>
       </nav>
+
+      <header class="header">
+        <div class="header__conent">
+          <h1 class="title">Hey</h1>
+          <h1 class="title crimson">I'm Redwan.</h1>
+          <p class="header__para">
+            An aspiring
+            <b class="crimson">Frontend Software Engineer</b> with a passion for
+            learning new technologies & building asthetic web applications for
+            great user experience.
+            <br />
+            <br />
+            Here's a bit more <b class="crimson">about me.</b>
+          </p>
+          <div class="social__list">
+            <a
+              href="https://www.linkedin.com/in/redwan-ahmed/"
+              target="_blank"
+              class="social__link click">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </a>
+            <a
+              href="https://github.com/rahmed7331"
+              target="_blank"
+              class="social__link click">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a
+              href="https://google.com"
+              target="_blank"
+              class="social__link click"
+              ><i class="fa-solid fa-file"></i
+            ></a>
+          </div>
+        </div>
+      </header>
+      <button class="mail__btn click">
+        <i class="fa-solid fa-envelope"></i>
+      </button>
+      <a href="#projects" class="scroll"
+        ><div class="scroll__icon click"></div
+      ></a>
     </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="crimson">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="/assets/blinker mockup.png"
+                  class="project__img"
+                  alt="" />
+
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JS, React
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Aliquid, quas iusto similique officiis sit saepe est eos
+                    debitis possimus! quas iusto similique officiis sit saepe
+                    est eos debitis possimus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link">
+                      <i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="" class="project__description--link">
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="/assets/blinker mockup.png"
+                  class="project__img"
+                  alt="" />
+
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JS, React
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Aliquid, quas iusto similique officiis sit saepe est eos
+                    debitis possimus! quas iusto similique officiis sit saepe
+                    est eos debitis possimus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link">
+                      <i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="" class="project__description--link">
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="/assets/blinker mockup.png"
+                  class="project__img"
+                  alt="" />
+
+                <div class="project__wrapper--bg"></div>
+                <div class="project__description">
+                  <h3 class="project__description--title">Car Sales Project</h3>
+                  <h4 class="project__description--sub-title">
+                    HTML, CSS, JS, React
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Aliquid, quas iusto similique officiis sit saepe est eos
+                    debitis possimus! quas iusto similique officiis sit saepe
+                    est eos debitis possimus.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="" class="project__description--link">
+                      <i class="fa-brands fa-github"></i
+                    ></a>
+                    <a href="" class="project__description--link">
+                      <i class="fas fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="row footer__row">
+          <figure>
+            <h1 id="footer__logo">
+              <span class="crimson">Red</span>wan<span class="crimson">.</span>
+            </h1>
+          </figure>
+          <div class="footer__social--list">
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white">
+              Github</a
+            >
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white">
+              LinkedIn</a
+            >
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white">
+              Contact</a
+            >
+            <a
+              href="#"
+              class="footer__social--link link__hover-effect link__hover-effect--white">
+              Resume</a
+            >
+          </div>
+          <div class="footer__copyright">Copyright @ Redwan Ahmed</div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
