--- a/src/index.html
+++ b/src/index.html
@@ -4,48 +4,55 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Redwan Ahmed</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
+    <script src="index.js" defer></script>
     <script
       src="https://kit.fontawesome.com/46139afb7e.js"
       crossorigin="anonymous"></script>
-
-    <title>Redwan Ahmed</title>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("NACtL1j-tU189Z-h9");
+      })();
+    </script>
   </head>
 
   <body>
     <section id="landing-page">
       <nav>
         <figure>
-          <h1 id="personal-logo">
+          <h1 id="personal-logo" onclick="toggleModal()">
             <span class="crimson">Red</span>wan<span class="crimson">.</span>
           </h1>
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >About</a
             >
           </li>
-          <li lass=" nav__link">
+          <li class="nav__link click">
             <a
               href=""
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link click">
             <a
-              href=""
+              onclick="toggleModal()"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Contact</a
             >
           </li>
           <li class="nav__link click">
             <a
-              href=""
+              onclick="toggleContrast()"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               ><i class="fa-solid fa-circle-half-stroke"></i
             ></a>
@@ -56,7 +63,7 @@
       <header class="header">
         <div class="header__conent">
           <h1 class="title">Hey</h1>
-          <h1 class="title crimson">I'm Redwan.</h1>
+          <h1 class="title crimson name-title">I'm Redwan.</h1>
           <p class="header__para">
             An aspiring
             <b class="crimson">Frontend Software Engineer</b> with a passion for
@@ -64,7 +71,8 @@
             great user experience.
             <br />
             <br />
-            Here's a bit more <b class="crimson">about me.</b>
+            Here's a bit more
+            <b class="crimson click" onclick="toggleModal()">about me.</b>
           </p>
           <div class="social__list">
             <a
@@ -88,12 +96,103 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click">
+      <button class="mail__btn click" onclick="toggleModal()">
         <i class="fa-solid fa-envelope"></i>
       </button>
       <a href="#projects" class="scroll"
         ><div class="scroll__icon click"></div
       ></a>
+      <div class="modal">
+        <div class="modal__half modal__about">
+          <h3 class="modal__title modal__title--about">
+            Here's a bit about me.
+          </h3>
+          <h4 class="modal__sub-title modal__sub-title--about">
+            Frontend Software Engineer
+          </h4>
+          <p class="modal__para">
+            I'm a <b class="crimson">Frontend developer</b> with a proven
+            ability to help companies create and maintain elegant code bases for
+            <b class="crimson">reusability</b>. I currently work with and learn
+            from a <b class="crimson">team</b> of extremely
+            <b class="crimson">talented</b> and
+            <b class="crimson">experienced</b> software engineers to solve
+            real-world issues.
+            <br />
+            I am passionate about
+            <b class="crimson">learning new technologies</b> with an eagerness
+            to <b class="crimson">tackle</b> complex engineering problems and
+            find creative ways to enhance
+            <b class="crimson">user experience</b>.
+          </p>
+          <div class="modal__languages">
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="/assets/HTML5.png"
+                alt="" />
+              <span class="language__name">HTML</span>
+            </figure>
+            <figure class="modal__language">
+              <img class="modal__language--img" src="/assets/CSS.webp" alt="" />
+              <span class="language__name">CSS</span>
+            </figure>
+            <figure class="modal__language">
+              <img class="modal__language--img" src="/assets/JS.webp" alt="" />
+              <span class="language__name">JavaScript</span>
+            </figure>
+
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="/assets/react.webp"
+                alt="" />
+              <span class="language__name">React</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--img"
+                src="/assets/NextJs.png"
+                alt="" />
+              <span class="language__name">NextJS</span>
+            </figure>
+          </div>
+        </div>
+        <div class="modal__half modal__contact">
+          <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
+          <h3 class="modal__title modal__title--contact">Let's Connect</h3>
+          <h4 class="modal__sub-title modal__sub-title--contact">
+            I am currently open to new opportunities.
+          </h4>
+          <form onsubmit="contact(event)" id="contact__form">
+            <div class="form__item">
+              <label class="form__item--label">Name</label>
+              <input type="text" name="user_name" class="input" required />
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Email</label>
+              <input type="email" name="user_email" class="input" required />
+            </div>
+            <div class="form__item">
+              <label class="form__item--label">Message</label>
+              <textarea
+                type="text"
+                name="user_message"
+                class="input"
+                required></textarea>
+            </div>
+            <button id="contact__submit" class="form__submit">
+              Connect with me
+            </button>
+          </form>
+          <div class="modal__overlay modal__overlay--loading">
+            <i class="fas fa-spinner"></i>
+          </div>
+          <div class="modal__overlay modal__overlay--success">
+            Thanks for the message! Looking forward to speaking to you soon.
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="projects">
